<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:textSize="30sp"-->
<!--        android:text="Volley Examples">-->
<!--    </TextView>-->

    <Button android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Login" />

    <Button android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Sign Up" />

</androidx.appcompat.widget.LinearLayoutCompat>