<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="290dp"
            android:text="Home"
            android:textColor="#ffffff">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/loginUsernameEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter username Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/loginPasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter password Here">
        </EditText>

    </LinearLayout>

    <Button android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Login" />

    <Button android:id="@+id/btnForgotPassword"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Forgot Password" />

    <TextView
        android:id="@+id/testText4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        android:text="" />

</androidx.appcompat.widget.LinearLayoutCompat>